--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="full services_blog">
                        <img class="img-responsive" src="images/s1.png" alt="#" />
-                       <h4>Safe & Secure</h4>
+                       <h4>Criptomonedas</h4>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
