--- a/index.html
+++ b/index.html
@@ -170,9 +170,6 @@
                     <div class="full paddding_left_15">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                     </div>
-                    <div class="full paddding_left_15">
-                        <a class="main_bt" href="#">Seguir Leyendo</a>
-                    </div>
                 </div>
             </div>
         </div>
@@ -185,34 +182,22 @@
                 <div class="col-md-12">
                     <div class="full">
                         <div class="heading_main text_align_center">
-                           <h2><span class="theme_color"></span>Servicios</h2>  
+                           <h2><span class="theme_color"></span>Arriendo de Maquinarias</h2>  
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="full services_blog">
                        <img class="img-responsive" src="images/s1.png" alt="#" />
-                       <h4>Criptomonedas</h4>
+                       <h4>Grúas Horquillas</h4>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="full services_blog">
                         <img class="img-responsive" src="images/s2.png" alt="#" />
-                        <h4>Mobile Apps</h4>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <div class="full services_blog">
-                        <img class="img-responsive" src="images/s3.png" alt="#" />
-                        <h4>Wallet</h4>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <div class="full services_blog">
-                        <img class="img-responsive" src="images/s4.png" alt="#" />
-                        <h4>Experts Support</h4>
+                        <h4>Plataforma Elevadoras</h4>
                     </div>
                 </div>
             </div>
