--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                     </div>
                     <div class="site_information">
                         <ul>
-                            <li><a href="mailto:exchang@gmail.com"><img src="images/mail_icon.png" alt="#" />gomaq@gmail.com</a></li>
-                            <li><a href="tel:exchang@gmail.com"><img src="images/phone_icon.png" alt="#" />+7123569847</a></li>
+                            <li><a href="mailto:exchang@gmail.com"><img src="images/mail_icon.png" alt="#" />maquinarias@gomaq.cl</a></li>
+                            <li><a href="tel:exchang@gmail.com"><img src="images/phone_icon.png" alt="#" />+985566008</a></li>
                             <!--<li><a class="join_bt" href="#">Join us</a></li>-->
                         </ul>
                     </div>
@@ -94,7 +94,7 @@
                         <li><a class="nav-link active" href="index.html">Inicio</a></li>
                         <li><a class="nav-link" href="about.html">Quienes Somos</a></li>
                         <li><a class="nav-link" href="services.html">Servicios</a></li>
-                        <li><a class="nav-link" href="contact.html">Contacto</a></li>
+                        <li><a class="nav-link" href="#contacto">Contacto</a></li>
                     </ul>
                 </div>
                      </div>
@@ -190,13 +190,13 @@
             <div class="row">
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="full services_blog">
-                       <img class="img-responsive" src="images/s1.png" alt="#" />
+                       <img class="img-responsive" src="images/horquillas.jpg" alt="#" />
                        <h4>Grúas Horquillas</h4>
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="full services_blog">
-                        <img class="img-responsive" src="images/s2.png" alt="#" />
+                        <img class="img-responsive" src="images/elevadora.jpg" alt="#" />
                         <h4>Plataforma Elevadoras</h4>
                     </div>
                 </div>
@@ -232,17 +232,15 @@
                         </div>
                         <div class="col-sm-6 col-md-6 col-lg-3">
                             <div class="full">
-                                <h3>Quick Links</h3>
+                                <h3>Links</h3>
                             </div>
-                            <div class="full">
-                                <ul class="menu_footer">
-                                    <li><a href="home.html">> Home</a></li>
-                                    <li><a href="about.html">> About</a></li>
-                                    <li><a href="exchange.html">> Exchange</a></li>
-                                    <li><a href="services.html">> Services</a></li>
-                                    <li><a href="new.html">> New</a></li>
-                                    <li><a href="contact.html">> Contact</a></li>
-                                </ul>
+                            <div class="full" id="contacto">
+                                <ul class="navbar-nav">
+                                <li><a class="nav-link active" href="index.html">Inicio</a></li>
+                                <li><a class="nav-link" href="about.html">Quienes Somos</a></li>
+                                <li><a class="nav-link" href="services.html">Servicios</a></li>
+                                <li><a class="nav-link" href="#contacto">Contacto</a></li>
+                            </ul>
                             </div>
                         </div>
 
@@ -250,12 +248,20 @@
                             <div class="full">
                                 <div class="footer_blog full white_fonts">
                              <h3>Contacto</h3>
-                             <ul class="full">
-                               <li><img src="images/i5.png"><span>Villa del Cóbil<br>Rengo, Región del Libertador General Bernardo O'Higgins.</span></li>
-                               <li><img src="images/i6.png"><span>demo@gmail.com</span></li>
-                               <li><img src="images/i7.png"><span>+12586954775</span></li>
-                             </ul>
-                         </div>
+                                 <ul class="full menu-abajo">
+                                   <li><img src="images/i5.png"><span>Villa del Cóbil<br>Rengo, Región del Libertador General Bernardo O'Higgins.</span></li>
+                                   <li><img src="images/i6.png"><span>maquinarias@gomaq.cl</span></li>
+                                   <li><img src="images/i7.png"><span>+985566008</span></li>
+                                   <li>
+                                        <a href="https://www.instagram.com/maquinariasgomaq/">
+                                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                                        </a>
+                                        <a href="https://www.facebook.com/profile.php?id=100066751450143">
+                                            <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                                        </a>
+                                    </li>
+                                 </ul>
+                                </div>
                             </div>
                         </div>
 					</div>
