--- a/services.html
+++ b/services.html
@@ -55,12 +55,12 @@
             <div class="container">
                 <div class="row">
                     <div class="logo_section">
-                        <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="image"></a>
+                        <a class="navbar-brand" href="index.html"><img src="images/logo-png-2.png" alt="image" width="250"></a>
                     </div>
                     <div class="site_information">
                         <ul>
                             <li><a href="mailto:exchang@gmail.com"><img src="images/mail_icon.png" alt="#" />exchang@gmail.com</a></li>
-                            <li><a href="tel:exchang@gmail.com"><img src="images/phone_icon.png" alt="#" />+7123569847</a></li>
+                            <li><a href="tel:56985566008"><img src="images/phone_icon.png" alt="#" />+56985566008</a></li>
                             <li><a class="join_bt" href="#">Join us</a></li>
                         </ul>
                     </div>
@@ -81,22 +81,14 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbar-wd">
                     <ul class="navbar-nav">
-                        <li><a class="nav-link" href="index.html">Home</a></li>
-                        <li><a class="nav-link" href="about.html">About</a></li>
-                        <li><a class="nav-link" href="exchange.html">Exchange</a></li>
-                        <li><a class="nav-link" href="services.html">Services</a></li>
-                        <li><a class="nav-link" href="new.html">News</a></li>
-                        <li><a class="nav-link" href="contact.html">Contact</a></li>
+                        <li><a class="nav-link active" href="index.html">Inicio</a></li>
+                        <li><a class="nav-link" href="about.html">Quienes Somos</a></li>
+                        <li><a class="nav-link" href="services.html">Servicios</a></li>
+                        <li><a class="nav-link" href="#contacto">Contacto</a></li>
                     </ul>
                 </div>
                      </div>
                  </nav>
-                 <div class="search-box">
-                    <input type="text" class="search-txt" placeholder="Search">
-                    <a class="search-btn">
-                        <img src="images/search_icon.png" alt="#" />
-                    </a>
-                </div> 
                 </div>
             </div>
           </div>
@@ -200,49 +192,41 @@
             <div class="row">
                <div class="col-md-12 white_fonts">
                     <div class="row">
-                        <div class="col-sm-6 col-md-6 col-lg-3">
+                        <div class="col-sm-6 col-md-6 col-lg-4">
                             <div class="full">
-                                <img class="img-responsive" src="images/footer_logo.png" alt="#" />
+                                <img class="img-responsive" src="images/logo-png-2.png" alt="#" width="250" />
                             </div>
                         </div>
-                        <div class="col-sm-6 col-md-6 col-lg-3">
+                        <div class="col-sm-6 col-md-6 col-lg-4">
                             <div class="full">
-                                <h3>Quick Links</h3>
+                                <h3>Links</h3>
                             </div>
                             <div class="full">
-                                <ul class="menu_footer">
-                                    <li><a href="home.html">> Home</a></li>
-                                    <li><a href="about.html">> About</a></li>
-                                    <li><a href="exchange.html">> Exchange</a></li>
-                                    <li><a href="services.html">> Services</a></li>
-                                    <li><a href="new.html">> New</a></li>
-                                    <li><a href="contact.html">> Contact</a></li>
-                                </ul>
+                                <ul class="navbar-nav" id="contacto">
+                                <li><a class="nav-link active" href="index.html">Inicio</a></li>
+                                <li><a class="nav-link" href="about.html">Quienes Somos</a></li>
+                                <li><a class="nav-link" href="services.html">Servicios</a></li>
+                                <li><a class="nav-link" href="#contacto">Contacto</a></li>
+                            </ul>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-md-6 col-lg-3">
+                        <div class="col-sm-6 col-md-6 col-lg-4">
                             <div class="full">
                                 <div class="footer_blog full white_fonts">
-                             <h3>Newsletter</h3>
-                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
-                             <div class="newsletter_form">
-                                <form action="index.html">
-                                   <input type="email" placeholder="Your Email" name="#" required="">
-                                   <button>Submit</button>
-                                </form>
-                             </div>
-                         </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-6 col-md-6 col-lg-3">
-                            <div class="full">
-                                <div class="footer_blog full white_fonts">
-                             <h3>Contact us</h3>
-                             <ul class="full">
-                               <li><img src="images/i5.png"><span>London 145<br>United Kingdom</span></li>
-                               <li><img src="images/i6.png"><span>demo@gmail.com</span></li>
-                               <li><img src="images/i7.png"><span>+12586954775</span></li>
-                             </ul>
+                             <h3>Contacto</h3>
+                             <ul class="full menu-abajo">
+                                   <li><img src="images/i5.png"><span>Lote el bajo s/n villa del cobil<br>Rengo, Región del Libertador General Bernardo O'Higgins.</span></li>
+                                   <li><img src="images/i6.png"><span>maquinarias@gomaq.cl</span></li>
+                                   <li><img src="images/i7.png"><span>+56985566008</span></li>
+                                   <li>
+                                        <a href="https://www.instagram.com/maquinariasgomaq/">
+                                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                                        </a>
+                                        <a href="https://www.facebook.com/profile.php?id=100066751450143">
+                                            <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                                        </a>
+                                    </li>
+                                 </ul>
                          </div>
                             </div>
                         </div>
@@ -257,7 +241,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <p class="crp">© Copyrights 2019 design by html.design</p>
+                    <p class="crp">© Copyrights 2021. Desarrollado por Computing Speed Solutions.</p>
                 </div>
             </div>
         </div>
