--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <link rel="stylesheet" href="css/responsive.css" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/custom.css" />
+    <!-- Slick -->
+    <link rel="stylesheet" href="css/slick.css"/>
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -229,7 +231,25 @@
                 </div>
             </div>
             <div class="row">
-                
+                <div class="col-md-12">
+                    <div class="for_slick_slider multiple-items">
+                    <div class="items">
+                        <img src="images/agrofarming.png" alt="">
+                    </div>
+                    <div class="items">
+                        <img src="images/guillaume.png" alt="">
+                    </div>
+                    <div class="items">
+                        <img src="images/rentokill.jpg" alt="">
+                    </div>
+                    <div class="items">
+                        <img src="images/lapopular.jpeg" alt="">
+                    </div>
+                    <div class="items">
+                        <img src="images/prat.jpeg" alt="">
+                    </div>
+                </div>
+                </div>
             </div>
         </div>
     </div>
@@ -322,6 +342,8 @@
     <script src="js/isotope.min.js"></script>
     <script src="js/images-loded.min.js"></script>
     <script src="js/custom.js"></script>
+    <script type="js/slick.min.js"></script>
+    <script type="js/main.js"></script>
 	<script>
 	/* counter js */
 
@@ -423,6 +445,7 @@ jQuery(function ($) {
 	$this.countTo(options);
   }
 });
+
 	</script>
 </body>
 
