--- a/index.html
+++ b/index.html
@@ -342,8 +342,8 @@
     <script src="js/isotope.min.js"></script>
     <script src="js/images-loded.min.js"></script>
     <script src="js/custom.js"></script>
-    <script type="js/slick.min.js"></script>
-    <script type="js/main.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/main.js"></script>
 	<script>
 	/* counter js */
 
