--- a/about.html
+++ b/about.html
@@ -91,7 +91,6 @@
                     <ul class="navbar-nav">
                         <li><a class="nav-link active" href="index.html">Inicio</a></li>
                         <li><a class="nav-link" href="about.html">Quienes Somos</a></li>
-                        <li><a class="nav-link" href="services.html">Servicios</a></li>
                         <li><a class="nav-link" href="#contacto">Contacto</a></li>
                     </ul>
                 </div>
@@ -130,10 +129,7 @@
                         </div>
                     </div>
                     <div class="full paddding_left_15">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                    </div>
-                    <div class="full paddding_left_15">
-                        <a class="main_bt" href="#">Read More ></a>
+                        <p>Empresa GOMAQ se inserta en el rubro de arriendo de grúas horquillas y plataformas elevadoras en el año 2020 con la finalidad de entregar un servicio de calidad para nuestros y futuros clientes, nace por la demanda que vio el propietario que existía en el rubro agrícola/p>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -218,7 +214,6 @@
                                 <ul class="navbar-nav" id="contacto">
                                 <li><a class="nav-link active" href="index.html">Inicio</a></li>
                                 <li><a class="nav-link" href="about.html">Quienes Somos</a></li>
-                                <li><a class="nav-link" href="services.html">Servicios</a></li>
                                 <li><a class="nav-link" href="#contacto">Contacto</a></li>
                             </ul>
                             </div>
