--- a/index.html
+++ b/index.html
@@ -233,19 +233,19 @@
                 <div class="col-md-12">
                     <div class="for_slick_slider multiple-items">
                     <div class="items">
-                        <img src="images/agrofarming.png" alt="">
+                        <img src="images/agrofarming.jpg" alt="">
                     </div>
                     <div class="items">
-                        <img src="images/guillaume.png" alt="">
+                        <img src="images/guillaume.jpg" alt="">
                     </div>
                     <div class="items">
                         <img src="images/rentokill.jpg" alt="">
                     </div>
                     <div class="items">
-                        <img src="images/lapopular.jpeg" alt="">
+                        <img src="images/lapopular.jpg" alt="">
                     </div>
                     <div class="items">
-                        <img src="images/prat.jpeg" alt="">
+                        <img src="images/prat.jpg" alt="">
                     </div>
                 </div>
                 </div>
