--- a/gruas.html
+++ b/gruas.html
@@ -101,7 +101,7 @@
                     <ul class="navbar-nav">
                         <li><a class="nav-link active" href="index.html">Inicio</a></li>
                         <li><a class="nav-link" href="about.html">Quienes Somos</a></li>
-                        <li><a class="nav-link" href="contact.html">Contacto</a></li>
+                        <li><a class="nav-link" href="#contacto">Contacto</a></li>
                     </ul>
                 </div>
                      </div>
@@ -222,7 +222,7 @@
                             <div class="full">
                                 <h3>Links</h3>
                             </div>
-                            <div class="full">
+                            <div class="full" id="contacto">
                                 <ul class="navbar-nav">
                                 <li><a class="nav-link active" href="index.html">Inicio</a></li>
                                 <li><a class="nav-link" href="about.html">Quienes Somos</a></li>
