--- a/about.html
+++ b/about.html
@@ -129,7 +129,8 @@
                         </div>
                     </div>
                     <div class="full paddding_left_15">
-                        <p>Empresa GOMAQ se inserta en el rubro de arriendo de grúas horquillas y plataformas elevadoras en el año 2020 con la finalidad de entregar un servicio de calidad para nuestros y futuros clientes, nace por la demanda que vio el propietario que existía en el rubro agrícola/p>
+                        <p>GoMAQ nace como empresa de arriendo de grúas horquillas y plataformas elevadoras en el año 2020, con la finalidad de entregar un servicio de calidad y excelencia para nuestros y futuros clientes. GoMAQ nace por una idea propia donde se busca potenciar la marca brindando un servicio de calidad, para ello contamos con maquinarias y trabajadores capacitados que están al nivel correspondiente con lo que entrega la empresa.</p>
+                        <p>En 2020 GoMAQ inicia su relación comercial con Agrofarming en donde se nos destaca por nuestro compromiso y calidad. En el segundo semestre del mismo año cerramos contratos con Guillaume, Ferretería La Popular, Rentokil y Ferretería Prat. Consolidándonos como una empresa de excelencia y así demostrando que llegamos para quedarnos.</p>
                     </div>
                 </div>
                 <div class="col-md-6">
