--- a/elevadora.html
+++ b/elevadora.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <!-- Site Metas -->
-    <title>Grúas de horquillas</title>
+    <title>Plataformas de elevadora</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="css/responsive.css" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/custom.css" />
+
     <!-- LightBox -->
     <link rel="stylesheet" href="css/lightbox.css">
 
@@ -142,11 +143,11 @@
                 <div class="col-md-6 layout_padding">
                     <div class="full paddding_left_15">
                         <div class="heading_main text_align_left">
-						   <h2><span class="theme_color">Grúa Horquilla</span></h2>	
+						   <h2><span class="theme_color">Plataformas elevadoras</span></h2>	
                         </div>
                     </div>
                     <div class="full paddding_left_15">
-                        <p>Grúa horquilla, montacargas​ es un vehículo contrapesado en su parte trasera que, mediante dos horquillas, se utiliza para subir, bajar y transportar palés, contenedores y otras cargas.
+                        <p>dispositivo mecánico diseñado para elevar personas a diferentes alturas. según sea su necesidad o tipo de trabajo que desea efectuar .
                         </p>
                     </div>
                 </div>
@@ -170,41 +171,22 @@
             <div class="row">
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="full news_blog">
-                       <img class="img-responsive" data-lightbox="image-1" data-title="My caption" src="images/grua-h-1.jpeg" alt="#" />
-                       <div class="overlay"><a class="main_bt transparent" data-lightbox="image-1" data-title="Captura" href="images/grua-h-1.jpeg">View</a></div>
+                       <img class="img-responsive" src="images/elevadora1.jpg" alt="#" style="height: 400px" />
+                       <div class="overlay"><a class="main_bt transparent" data-lightbox="image-1" data-title="Captura" href="images/elevadora1.jpg">View</a></div>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="full news_blog">
-                        <img class="img-responsive" src="images/grua-h-2.jpeg" alt="#" />
-                        <div class="overlay"><a class="main_bt transparent" data-lightbox="image-1" data-title="Captura" href="images/grua-h-2.jpeg">View</a></div>
+                        <img class="img-responsive" src="images/elevadora2.jpg" alt="#" style="height: 400px" />
+                        <div class="overlay"><a class="main_bt transparent" data-lightbox="image-1" data-title="Captura" href="images/elevadora2.jpg">View</a></div>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="full news_blog">
-                        <img class="img-responsive" src="images/grua-h-3.jpeg" alt="#" />
-                        <div class="overlay"><a class="main_bt transparent" data-lightbox="image-1" data-title="Captura" href="images/grua-h-3.jpeg">View</a></div>
+                        <img class="img-responsive" src="images/elevadora3.jpg" alt="#" style="height: 400px" />
+                        <div class="overlay"><a class="main_bt transparent" data-lightbox="image-1" data-title="Captura" href="images/elevadora3.jpg">View</a></div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 col-xs-12">
-                    <div class="full news_blog">
-                       <img class="img-responsive" src="images/grua-h-4.jpeg" alt="#" />
-                       <div class="overlay"><a class="main_bt transparent" data-lightbox="image-1" data-title="Captura" href="images/grua-h-4.jpeg">View</a></div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 col-xs-12">
-                    <div class="full news_blog">
-                        <img class="img-responsive" src="images/grua-h-5.jpeg" alt="#" />
-                        <div class="overlay"><a class="main_bt transparent" data-lightbox="image-1" data-title="Captura" href="images/grua-h-5.jpeg">View</a></div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 col-xs-12">
-                    <div class="full news_blog">
-                        <img class="img-responsive" src="images/grua-h-6.jpeg" alt="#" />
-                        <div class="overlay"><a class="main_bt transparent" data-lightbox="image-1" data-title="Captura" href="images/grua-h-6.jpeg">View</a></div>
-                    </div>
-                </div>
-
              </div>
         </div>
     </div>
@@ -285,8 +267,7 @@
     <script src="js/isotope.min.js"></script>
     <script src="js/images-loded.min.js"></script>
     <script src="js/custom.js"></script>
-    <script src="js/lightbox.js"></script>
-	
+	<script src="js/lightbox.js"></script>
 </body>
 
 </html>
