--- a/index.html
+++ b/index.html
@@ -207,8 +207,10 @@
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="full services_blog">
+                        <a href="elevadora.html">
                         <img class="img-responsive" src="images/elevadora.jpg" alt="#" />
                         <h4>Plataforma Elevadoras</h4>
+                        </a>
                     </div>
                 </div>
             </div>
