--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
                 </div>
             </div>
             <div class="row">
+                <!-- 
                 <div class="col-md-12">
                     <div class="for_slick_slider multiple-items">
                     <div class="items">
@@ -251,6 +252,29 @@
                     </div>
                 </div>
                 </div>
+                style="height: 350px; border: 1px solid black;"
+                -->
+
+               <div class="container">
+                <section class="customer-logos slider">
+                    <div class="slide">
+                        <img src="images/agrofarming.jpg">
+                    </div>
+                    <div class="slide">
+                        <img src="images/guillaume.jpg">
+                    </div>
+                    <div class="slide">
+                        <img src="images/rentokill.jpg">
+                    </div>
+                    <div class="slide">
+                        <img src="images/lapopular.jpg">
+                    </div>
+                    <div class="slide">
+                        <img src="images/prat.jpg">
+                    </div>
+                </section>
+
+               </div>
             </div>
         </div>
     </div>
