--- a/elevadora.html
+++ b/elevadora.html
@@ -187,6 +187,12 @@
                         <div class="overlay"><a class="main_bt transparent" data-lightbox="image-1" data-title="Captura" href="images/elevadora3.jpg">View</a></div>
                     </div>
                 </div>
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="full news_blog">
+                        <img class="img-responsive" src="images/elevadora4.jpeg" alt="#" style="height: 400px" />
+                        <div class="overlay"><a class="main_bt transparent" data-lightbox="image-1" data-title="Captura" href="images/elevadora4.jpeg">View</a></div>
+                    </div>
+                </div>
              </div>
         </div>
     </div>
