--- a/index.html
+++ b/index.html
@@ -66,14 +66,27 @@
                     </div>
                     <div class="site_information">
                         <ul class="menu-abajo">
-                            <li><a href="mailto:maquinarias@gomaq.cl"><img src="images/mail_icon.png" alt="#" />maquinarias@gomaq.cl</a></li>
-                            <li><a href="tel:56985566008"><img src="images/phone_icon.png" alt="#" />+56985566008</a></li>
+                            <li>
+                                <a href="mailto:maquinarias@gomaq.cl">
+                                    <!--<img src="images/mail_icon.png" alt="#" />maquinarias@gomaq.cl-->
+                                    <i class="fa fa-envelope-o icono" aria-hidden="true"></i>
+                                    maquinarias@gomaq.cl
+                                </a>
+                            </a>
+                            </li>
+                            <li>
+                                <a href="tel:56985566008">
+                                    <!--<img src="images/phone_icon.png" alt="#" />+56985566008-->
+                                    <i class="fa fa-mobile icono" aria-hidden="true"></i>
+                                    +56985566008
+                                </a>
+                            </li>
                             <li>
                                 <a href="https://www.instagram.com/maquinariasgomaq/">
-                                    <i class="fa fa-instagram" aria-hidden="true"></i>
+                                    <i class="fa fa-instagram icono" aria-hidden="true"></i>
                                  </a>
                                  <a href="https://www.facebook.com/profile.php?id=100066751450143">
-                                    <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                                    <i class="fa fa-facebook-official icono" aria-hidden="true"></i>
                                 </a>
                             </li>
                             <!--<li><a class="join_bt" href="#">Join us</a></li>-->
@@ -138,7 +151,7 @@
                         </div>
                     </div>
 
-                    <div class="pogoSlider-slide" style="background-image:url(images/slide-ejem-7.jpg);">
+                    <div class="pogoSlider-slide" style="background-image:url(images/slide1.jpeg);">
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12">
@@ -232,29 +245,6 @@
                 </div>
             </div>
             <div class="row">
-                <!-- 
-                <div class="col-md-12">
-                    <div class="for_slick_slider multiple-items">
-                    <div class="items">
-                        <img src="images/agrofarming.jpg" alt="">
-                    </div>
-                    <div class="items">
-                        <img src="images/guillaume.jpg" alt="">
-                    </div>
-                    <div class="items">
-                        <img src="images/rentokill.jpg" alt="">
-                    </div>
-                    <div class="items">
-                        <img src="images/lapopular.jpg" alt="">
-                    </div>
-                    <div class="items">
-                        <img src="images/prat.jpg" alt="">
-                    </div>
-                </div>
-                </div>
-                style="height: 350px; border: 1px solid black;"
-                -->
-
                <div class="container">
                 <section class="customer-logos slider">
                     <div class="slide">
