--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
                     </div>
                     <div class="full paddding_left_15">
                         <p>GoMAQ nace como empresa de arriendo de grúas horquillas y plataformas elevadoras en el año 2020, con la finalidad de entregar un servicio de calidad y excelencia para nuestros y futuros clientes. GoMAQ nace por una idea propia donde se busca potenciar la marca brindando un servicio de calidad, para ello contamos con maquinarias y trabajadores capacitados que están al nivel correspondiente con lo que entrega la empresa.</p>
-                        <p>En 2020 GoMAQ inicia su relación comercial con Agrofarming en donde se nos destaca por nuestro compromiso y calidad. En el segundo semestre del mismo año cerramos contratos con Guillaume, Ferretería La Popular, Rentokil y Ferretería Prat. Consolidándonos como una empresa de excelencia y así demostrando que llegamos para quedarnos.</p>
+                        <p>En 2020 GoMAQ inicia su relación comercial con Agroservicios Manquehue en donde se nos destaca por nuestro compromiso y calidad. En el segundo semestre del mismo año cerramos contratos con  Agrofarming, Guillaume, Ferretería La Popular, Rentokil y Ferretería Prat. Consolidándonos como una empresa de excelencia y así demostrando que llegamos para quedarnos.</p>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -142,59 +142,8 @@
         </div>
     </div>
     <!-- end section -->
-
-    <!-- section -->
-    <div class="section">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="full text_align_right_img">
-                        <img src="images/img1.png" alt="#" />
-                    </div>
-                </div>
-                <div class="col-md-6 layout_padding">
-                    <div class="full paddding_left_15">
-                        <div class="heading_main text_align_left">
-						   <h2><span class="theme_color">Welcome</span> To Exchange</h2>	
-                        </div>
-                    </div>
-                    <div class="full paddding_left_15">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                    </div>
-                    <div class="full paddding_left_15">
-                        <a class="main_bt" href="#">About more ></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-	<!-- end section -->
+ 
    
-    <!-- section -->
-    <div class="section white_fonts" style="background: #111;">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6" style="background: #fff;">
-                    <div class="full text_align_right_img">
-                        <img src="images/img2.png" alt="#" />
-                    </div>
-                </div>
-                <div class="col-md-6 layout_padding">
-                    <div class="full paddding_left_15">
-                        <div class="heading_main text_align_left">
-                           <h2><span class="theme_color">Apply for</span> Exchange</h2>    
-                        </div>
-                    </div>
-                    <div class="full paddding_left_15">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                    </div>
-                    <div class="full paddding_left_15">
-                        <a class="main_bt" href="#">Exchange ></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <!-- end section -->
     <!-- Start Footer -->
     <footer class="footer-box">
