--- a/elevadora.html
+++ b/elevadora.html
@@ -137,17 +137,17 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="full text_align_right_img">
-                        <img src="images/grua-h-0.jpg" alt="#" />
+                        <img src="images/plataforma-e-0.jpg" alt="#" />
                     </div>
                 </div>
                 <div class="col-md-6 layout_padding">
                     <div class="full paddding_left_15">
                         <div class="heading_main text_align_left">
-						   <h2><span class="theme_color">Plataformas elevadoras</span></h2>	
+						   <h2><span class="theme_color">Plataforma Elevadora</span></h2>	
                         </div>
                     </div>
                     <div class="full paddding_left_15">
-                        <p>dispositivo mecánico diseñado para elevar personas a diferentes alturas. según sea su necesidad o tipo de trabajo que desea efectuar.
+                        <p>Dispositivo mecánico diseñado para elevar personas a diferentes alturas. Según sea su necesidad o tipo de trabajo que desea efectuar.
                         </p>
                     </div>
                 </div>
@@ -171,26 +171,26 @@
             <div class="row">
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="full news_blog">
-                       <img class="img-responsive" src="images/elevadora1.jpg" alt="#" style="height: 400px" />
+                       <img class="img-responsive" src="images/plataforma-e-1.jpg"/>
                        <div class="overlay"><a class="main_bt transparent" data-lightbox="image-1" data-title="Captura" href="images/elevadora1.jpg">View</a></div>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="full news_blog">
-                        <img class="img-responsive" src="images/elevadora2.jpg" alt="#" style="height: 400px" />
+                        <img class="img-responsive" src="images/plataforma-e-2.jpg"/>
                         <div class="overlay"><a class="main_bt transparent" data-lightbox="image-1" data-title="Captura" href="images/elevadora2.jpg">View</a></div>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="full news_blog">
-                        <img class="img-responsive" src="images/elevadora3.jpg" alt="#" style="height: 400px" />
+                        <img class="img-responsive" src="images/plataforma-e-3.jpg"/>
                         <div class="overlay"><a class="main_bt transparent" data-lightbox="image-1" data-title="Captura" href="images/elevadora3.jpg">View</a></div>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="full news_blog">
-                        <img class="img-responsive" src="images/elevadora4.jpeg" alt="#" style="height: 400px" />
-                        <div class="overlay"><a class="main_bt transparent" data-lightbox="image-1" data-title="Captura" href="images/elevadora4.jpeg">View</a></div>
+                        <img class="img-responsive" src="images/plataforma-e-4.jpeg"/>
+                        <div class="overlay"><a class="main_bt transparent" data-lightbox="image-1" data-title="Captura" href="images/elevadora3.jpg">View</a></div>
                     </div>
                 </div>
              </div>
