--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <a class="navbar-brand" href="index.html"><img src="images/logo-png-2.png" alt="image" width="250"></a>
                     </div>
                     <div class="site_information">
-                        <ul class="menu-abajo">
+                        <ul class="menu-arriba">
                             <li>
                                 <a href="mailto:maquinarias@gomaq.cl">
                                     <!--<img src="images/mail_icon.png" alt="#" />maquinarias@gomaq.cl-->
@@ -81,6 +81,7 @@
                                     +56985566008
                                 </a>
                             </li>
+                            
                             <li>
                                 <a href="https://www.instagram.com/maquinariasgomaq/">
                                     <i class="fa fa-instagram icono" aria-hidden="true"></i>
