--- a/elevadora.html
+++ b/elevadora.html
@@ -137,17 +137,17 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="full text_align_right_img">
-                        <img src="images/plataforma-e-0.jpg" alt="#" />
+                        <img src="images/plataforma-ele-0.jpg" alt="#" />
                     </div>
                 </div>
                 <div class="col-md-6 layout_padding">
                     <div class="full paddding_left_15">
                         <div class="heading_main text_align_left">
-						   <h2><span class="theme_color">Plataforma Elevadora</span></h2>	
+						   <h2><span class="theme_color">Grúa Horquilla</span></h2>	
                         </div>
                     </div>
                     <div class="full paddding_left_15">
-                        <p>Dispositivo mecánico diseñado para elevar personas a diferentes alturas. Según sea su necesidad o tipo de trabajo que desea efectuar.
+                        <p>Grúa horquilla, montacargas​ es un vehículo contrapesado en su parte trasera que, mediante dos horquillas, se utiliza para subir, bajar y transportar palés, contenedores y otras cargas.
                         </p>
                     </div>
                 </div>
