--- a/elevadora.html
+++ b/elevadora.html
@@ -143,11 +143,11 @@
                 <div class="col-md-6 layout_padding">
                     <div class="full paddding_left_15">
                         <div class="heading_main text_align_left">
-						   <h2><span class="theme_color">Grúa Horquilla</span></h2>	
+						   <h2><span class="theme_color">Plataforma Elevadora</span></h2>	
                         </div>
                     </div>
                     <div class="full paddding_left_15">
-                        <p>Grúa horquilla, montacargas​ es un vehículo contrapesado en su parte trasera que, mediante dos horquillas, se utiliza para subir, bajar y transportar palés, contenedores y otras cargas.
+                        <p>Dispositivo mecánico diseñado para elevar personas a diferentes alturas. Según sea su necesidad o tipo de trabajo que desea efectuar.
                         </p>
                     </div>
                 </div>
